[package]
name = "rido"
version = "0.2.0"
edition = "2021"
description = "Fetch valid URLs of Microsoft Operating Systems."
license = "GPL-3.0"
homepage = "https://github.com/lj3954/rido"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["blocking"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[features]
default = [
    "consumer"
]

consumer = []
enterprise = []


