[package]
name = "rido"
version = "0.4.2"
edition = "2021"
description = "Fetch valid URLs and checksums of Microsoft Operating Systems."
license = "GPL-3.0"
repository = "https://github.com/lj3954/rido"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["blocking"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[features]
default = [
    "consumer"
]

consumer = []
enterprise = []


